# cuda-morph

./: .gitignore  ARCHITECTURE.md  LICENSE  MIGRATION.md  README.md  STRATEGY.md  TROUBLESHOOTING.md  VALIDATION_STATUS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  op_incompatibility.yml
.github/workflows/: ci.yml  publish.yml
docs/: README_zh.md  compatibility_matrix.md  migration_guide.md
examples/: deepspeed_training.py  demo_cpu_fallback.py  huggingface_inference.py  vllm_serving.py
src/ascend_compat/: __init__.py  __main__.py  _backend.py  _exceptions.py  _logging.py  bench.py  cli.py  device.py  exceptions.py  memory.py  ops.py  streams.py
src/ascend_compat/backends/: __init__.py  ascend.py  cambricon.py  intel.py  registry.py  rocm.py
src/ascend_compat/cli/: __init__.py  _info.py  _porter.py  _scanner.py  bench.py  check.py  compile.py  doctor.py  error.py  info.py  port.py  quant.py  run.py  scaffold.py  security.py  verify.py  vllm.py
src/ascend_compat/cuda_shim/: __init__.py  _import_hook.py  _monkey_patch.py  _patch_manager.py  _registry.py  compile_helpers.py  dtype_manager.py  quantization.py
src/ascend_compat/doctor/: __init__.py  env_setup.py  error_codes.py  fallback_monitor.py  op_auditor.py  security_check.py  version_check.py
src/ascend_compat/ecosystem/: __init__.py  _flash_attn_hook.py  deepspeed_patch.py  flash_attn.py  transformers_patch.py  triton_bridge.py  vllm_patch.py
src/ascend_compat/kernel_helper/: __init__.py  scaffold.py  spec.py
src/ascend_compat/validation/: __init__.py  op_verifier.py
tests/: conftest.py  conftest_hardware.py  test_backend.py  test_backends.py  test_bench.py  test_cli.py  test_compile_helpers.py  test_doctor.py  test_dtype_manager.py  test_ecosystem.py  test_end_to_end.py  test_env_setup.py  test_error_codes_expanded.py  test_flash_attn_hook.py  test_hardware.py  test_import_hook.py  test_integration.py  test_kernel_helper.py  test_launcher.py  test_monkey_patch.py  test_op_auditor.py  test_patch_manager.py  test_performance.py  test_quantization.py  test_registry.py  test_stress.py  test_triton_bridge.py  test_vllm_patch.py
