[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascend-compat"
version = "0.9.0"
description = "CUDA-to-Ascend ecosystem compatibility bridge — fixes the last mile between torch_npu and your existing CUDA code"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "ascend-compat contributors"},
]
keywords = ["pytorch", "cuda", "ascend", "npu", "cann", "huawei", "compatibility", "shim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
# torch_npu is installed separately from Huawei's repository — it is NOT on PyPI.
# Install via: pip install torch-npu (from Huawei's index or built from source)
# See: https://gitee.com/ascend/pytorch
ascend = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
ascend-compat = "ascend_compat.cli:main"

[project.urls]
Homepage = "https://github.com/JosephAhn23/cuda-morph"
Repository = "https://github.com/JosephAhn23/cuda-morph"
Documentation = "https://github.com/JosephAhn23/cuda-morph#readme"
Issues = "https://github.com/JosephAhn23/cuda-morph/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "benchmark: performance regression tests (may be slow)",
    "stress: stability/load tests (long-running, may use significant memory)",
    "hardware: requires real Ascend NPU hardware (skipped without --run-hardware)",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]  # Allow missing module/package docstrings at top level

[tool.ruff.lint.pydocstyle]
convention = "google"
